--- a/2.html
+++ b/2.html
@@ -1,19 +1,38 @@
-<!doctype html>
-<html>
-<head>
-  <title>WEB1 - CSS</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-   <li><a href="1.html">HTML</a></li>
-   <li><a href="2.html">CSS</a></li>
-   <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>CSS</h2>
-  <p>
-      Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media, Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages. user interfaces for web applications, and user interfaces for many mobile applications.
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>IPLANET-회사인사말</title>
+  </head>
+  <body>
+    <h1><a href="1.html">IPLANET</a></h1>
+    <ol>
+      <li><a href="2.html">회사인사말</a></li>
+      <li><a href="3.html">회사연혁</a></li>
+      <li><a href="4.html">오시는길</a></li>
+    </ol>
+    <h2>회사인사말</h2>
+    <p>
+    <strong>"안녕하세요. 고객사, 협력사 여러분 주식회사 아이플래넷입니다."</strong>
+    <br>
+    IPLANET(주식회사 아이플래넷)은 IPLANNET(IT Planne Network)의 줄임말로 "IT 비즈니스에 효율적이고 체계적인 방법론을 제시한다."는 뜻에서 변경되어진 회사명 입니다.
+    <br>
+    <br>
+    폐사는 모든 세상에 IT기술로 구현된 미래를 위한 고민을 끊임없이 지속해왔으며, 고객에 비즈니스에 중요 가치에 대한 생각을 정립하기 위해 노력해왔습니다.
+    <br>
+    <br>
+    이에'IT기술을 통한 사람이 앞으로 살아갈 미래에 기여하는 기업'을 기업의 존재가치로 여기고 지켜나가고 있으며 기업가치의 정신적 근간이되는 핵심가치로 정립하여 구성원 모두가 지켜나갈 수 있도록 최선을 다하고 있습니다.
+    <br>
+    이러한 핵심가치는 회사의 중심이며, 기준이며 원칙이라고 생각합니다.
+    <br>
+    또한, 조직 구성원들은 이런 핵심가치를 기반으로 아이디어 및 창의적인 생각을 공유하며 서로가 발전할 수 있는 방향으로 나아가고 있습니다.
+    <br>
+    <br>
+    폐사는 세상의 연결되는 통로가 되기 위해, 미래를 향해 나아가는 리더가 되기 위해 항상 한걸음 더 나아가도록 하겠습니다. 'IT기술을 통한 미래가치의 실현' 그 속에서 저희 아이플래넷이 고객 여러분들의 최우선 기업이 될 수 있도록 심혈을 기울이겠습니다.
+    <br>
+    향후 더 나아가 지속적인 연구개발을 통하여 미래에 새로운 혁신이 만들어질 날까지 최선을 다하여 도약할 수 있도록 하겠습니다.
+    <br>
+    <img src="giphy.gif" alt="spongebob" width="100%">
   </p>
-</body>
+  </body>
 </html>
