--- a/3.html
+++ b/3.html
@@ -1,19 +1,95 @@
-<!doctype html>
-<html>
-<head>
-  <title>WEB1 - JavaScript</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-   <li><a href="1.html">HTML</a></li>
-   <li><a href="2.html">CSS</a></li>
-   <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>JavaScript</h2>
-  <p>
-    JavaScript (/'d3a:va,skript/[6], often abbreviated as 35, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of world wide web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
-  </p>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>IPLANET-회사연혁</title>
+  </head>
+  <body>
+    <h1><a href="1.html">IPLANET</a></h1>
+    <ol>
+      <li><a href="2.html">회사인사말</a></li>
+      <li><a href="3.html">회사연혁</a></li>
+      <li><a href="4.html">오시는길</a></li>
+    </ol>
+    <p>
+      <strong>⇒ 2020년</strong>
+      <br>
+          09월 안랩 엔드포인트보안 공인 파트너 선정
+          <br>
+          08월 OMS 조달총판 계약
+          <br>
+          07월 차량관제플랫폼 한국 저작권위원회 등록
+          <br>
+          05월 이노비즈 인증
+          <br>
+          05월 기술평가 등급 T4 획득
+          <br>
+          02월 기업부설연구소 설립
+          <br>
+          01월 Bwunder Aliantz연합 가입
+          <br>
+          <br>
+          <u>---------------------------------------------------------------</u>
+          <br>
+          <br>
+      <strong>⇒ 2019년</strong>
+      <br>
+          12월  서울사무소에서 금정사무소로 확장이전
+          <br>
+          12월 슈파스디자인/시로코/컴퓨마/컴퓨마 캐나다 기술협력 파트너 등록
+          <br>
+          11월 KOTRA K-Global@Chaina 2019 행사 참여
+          <br>
+          09월  페르소나시스템 솔루션 파트너 등록
+          <br>
+          05월  업무서비스 S-IoT 고도화 사업 개발참여
+          <br>
+          01월  토이스미스  기술협력 파트너 등록
+          <br>
+          <br>
+          <u>---------------------------------------------------------------</u>
+          <br>
+          <br>
+      <strong>⇒ 2018년</strong>
+      <br>
+          11월  벤처기업등록
+          <br>
+          08월  SK인포섹 솔루션 파트너 등록
+          <br>
+          07월  연구전담부서 등록
+          <br>
+          07월  아이젝스 기술협력 파트너 등록
+          <br>
+          07월  본사 내부 연구소 설립
+          <br>
+          05월  (주)LG-Hitachi 파트너 등록
+          <br>
+          <br>
+          <u>---------------------------------------------------------------</u>
+          <br>
+          <br>
+      <strong>⇒ 2017년</strong>
+      <br>
+          11월  (주)현대정보기술 파트너 등록
+          <br>
+          11월  (주)롯데정보통신 파트너 등록
+          <br>
+          09월  화성사무소에서 서울사무소로 확장이전
+          <br>
+          09월  (주)시큐에버 reverse-Wall 현대 그룹 계열사 총판 계약
+          <br>
+          <br>
+          <u>---------------------------------------------------------------</u>
+          <br>
+          <br>
+      <strong>⇒ 2016년</strong>
+      <br>
+          08월  (주)안랩 파트너 등록(방화벽, IPS, DDoS)
+          <br>
+          03월  (주)나일소프트 파트너 등록(로그분석 및 취약점 분석)
+          <br>
+          01월  (주)아이플래닛 설립
+          <br>
+</p>
+  </body>
 </html>
