--- a/1.html
+++ b/1.html
@@ -1,44 +1,20 @@
-<!doctype html>
-<html>
-<head>
-  <title>WEB1 - html</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-   <li><a href="1.html">HTML</a></li>
-   <li><a href="2.html">CSS</a></li>
-   <li><a href="3.html">JavaScript</a>
-</li>
-  </ol>
-  <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">
-  Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the apperance of the document.
-<img src="coding.jpg" alt="Fall in Snow over the Car" width="100%">
-</p><p style="margin-top:45px;">
-HTML elements are the building blocks of HTML pages. With constructs, images and other objects, such as interactive forms, may be embedded into the rendered page, It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
-<p>
-  <div id="disqus_thread"></div>
- <script>
-
- /**
- *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
- *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
- /*
- var disqus_config = function () {
- this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
- this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
- };
- */
- (function() { // DON'T EDIT BELOW THIS LINE
- var d = document, s = d.createElement('script');
- s.src = 'https://web1-2.disqus.com/embed.js';
- s.setAttribute('data-timestamp', +new Date());
- (d.head || d.body).appendChild(s);
- })();
- </script>
- <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>IPLANET</title>
+  </head>
+  <body>
+    <h1><a href="1.html">IPLANET</a></h1>
+    <ol>
+      <li><a href="2.html">회사인사말</a></li>
+      <li><a href="3.html">회사연혁</a></li>
+      <li><a href="4.html">오시는길</a></li>
+    </ol>
+    <h2>서비스&인프라</h2>
+    <p><a href="통합관제서비스.html">통합관제서비스</a>,<a href="ICT융합서비스.html">ICT융합서비스</a>,<a href="SI및개발서비스.html">SI및개발서비스</a>,<a href="정보보호서비스.html">정보보호서비스</a>,<a href="차량관제서비스.html">차량관제서비스</a>,<a href="지속적인유지보수서비스.html">지속적인유지보수서비스</a>등이 있습니다.
+      <br>
+      <img src="gifimage.gif" alt="spin earth" width="100%">
+    </p>
+  </body>
 </html>
