--- a/3.html
+++ b/3.html
@@ -5,7 +5,7 @@
     <title>IPLANET-회사연혁</title>
   </head>
   <body>
-    <h1><a href="1.html">IPLANET</a></h1>
+    <h1><a href="index.html">IPLANET</a></h1>
     <ol>
       <li><a href="2.html">회사인사말</a></li>
       <li><a href="3.html">회사연혁</a></li>
