--- a/ICT융합서비스.html
+++ b/ICT융합서비스.html
@@ -5,7 +5,7 @@
     <title>IPLANET-ICT융합서비스</title>
   </head>
   <body>
-    <h1><a href="1.html">IPLANET</a></h1>
+    <h1><a href="index.html">IPLANET</a></h1>
     <h2>ICT융합서비스</h2>
     <p>
     상품과 서비스의 본질에 영향을 미쳐 새로운 유형의 상품과 서비스를 창출하며, 새로운 가치를 제공합니다. 궁극적으로 고객이 요구하는 해결책을 통해 새로운 가치를 창출하는 서비스입니다.
