--- a/SI및개발서비스.html
+++ b/SI및개발서비스.html
@@ -5,7 +5,7 @@
     <title>IPLANET-SI및개발서비스</title>
   </head>
   <body>
-    <h1><a href="1.html">IPLANET</a></h1>
+    <h1><a href="index.html">IPLANET</a></h1>
     <h2>SI및개발서비스</h2>
     <p>
     IT보안 사업 및 컨설팅 경험을 통해 축적된 노하우를 바탕으로 고객의 요구를 충족시키며, 원하는 방향으로 분석 및 개발을 통해서 고객 NEEDS를 충족시키는 서비스 입니다.
