--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
-<!doctype html>
-<html>
-<head>
-  <title>WEB1 - WELCOME</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-   <li><a href="1.html">HTML</a></li>
-   <li><a href="2.html">CSS</a></li>
-   <li><a href="3.html">JavaScript</a>
-</li>
-  </ol>
-  <h2>WEB</h2>
-  <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.</p>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>IPLANET</title>
+  </head>
+  <body>
+    <h1><a href="index.html">IPLANET</a></h1>
+    <ol>
+      <li><a href="2.html">회사인사말</a></li>
+      <li><a href="3.html">회사연혁</a></li>
+      <li><a href="4.html">오시는길</a></li>
+    </ol>
+    <h2>서비스&인프라</h2>
+    <p><a href="통합관제서비스.html">통합관제서비스</a>,<a href="ICT융합서비스.html">ICT융합서비스</a>,<a href="SI및개발서비스.html">SI및개발서비스</a>,<a href="정보보호서비스.html">정보보호서비스</a>,<a href="차량관제서비스.html">차량관제서비스</a>,<a href="지속적인유지보수서비스.html">지속적인유지보수서비스</a>등이 있습니다.
+      <br>
+      <img src="gifimage.gif" alt="spin earth" width="100%">
+    </p>
+    <p>
+      <div id="disqus_thread"></div>
+     <script>
+
+     /**
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+     /*
+     var disqus_config = function () {
+     this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+     };
+     */
+     (function() { // DON'T EDIT BELOW THIS LINE
+     var d = document, s = d.createElement('script');
+     s.src = 'https://web1-2.disqus.com/embed.js';
+     s.setAttribute('data-timestamp', +new Date());
+     (d.head || d.body).appendChild(s);
+     })();
+     </script>
+     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+  </body>
 </html>
