--- a/통합관제서비스.html
+++ b/통합관제서비스.html
@@ -5,7 +5,7 @@
     <title>IPLANET-통합관제서비스</title>
   </head>
   <body>
-    <h1><a href="1.html">IPLANET</a></h1>
+    <h1><a href="index.html">IPLANET</a></h1>
     <h2>통합관제서비스</h2>
     <p>사물인터넷 시대에 접어들면서 <strong>통합센서 및 게이트웨이(위치,온도,습도 등)장치 모듈</strong>을 장착하고 센서로부터 수집된 정보를 빅데이터 분석 기술을 이용한 종합관리 시스템 입니다.</p>
   </body>
